--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
    "name": "ajs_retro-game-ts",
    "version": "1.0.0",
    "description": "AJS. Retro Game",
-   "main": "app.js",
+   "main": "app.ts",
    "scripts": {
       "test": "jest",
       "coverage": "jest --coverage",
       "lint": "eslint .",
       "lint:fix": "eslint . --fix",
-      "build": "webpack --mode production",
+      "build:prod": "webpack --mode production",
       "build:dev": "webpack --mode development",
       "serve": "webpack serve",
       "watch": "tsc -w"
@@ -27,6 +27,8 @@
       "@eslint/js": "^9.9.0",
       "@stylistic/eslint-plugin-js": "^2.6.4",
       "@types/jest": "^29.5.5",
+      "@types/node": "^22.7.4",
+      "@types/webpack": "^5.28.5",
       "@types/webpack-dev-server": "^4.7.2",
       "@webpack-cli/generators": "^3.0.7",
       "babel-loader": "^9.1.3",
@@ -42,6 +44,7 @@
       "style-loader": "^4.0.0",
       "ts-jest": "^29.2.5",
       "ts-loader": "^9.5.1",
+      "ts-node": "^10.9.2",
       "typescript": "^5.6.2",
       "webpack": "^5.93.0",
       "webpack-cli": "^5.1.4",
